# VBM_PR1_workspace_M2

./: README.md
VBM_PR1_M2/: grconvnet_grasp.py  package.xml  setup.cfg  setup.py
VBM_PR1_M2/VBM_PR1_M2/: servicecaller.py  subscriber_member_function.py
VBM_PR1_M2/VBM_PR1_M2/ggcnn/: aaaahhh.py  ggcnn_grasp_processor.py  image_preprocessed_call.py
VBM_PR1_M2/VBM_PR1_M2/ggcnn/.ipynb_checkpoints/: image_preprocessed_call-checkpoint.py  jupyter- try-checkpoint.ipynb
VBM_PR1_M2/ggcnn/: ggcnn_grasp_processor.py  image_preprocessed_call.py
VBM_PR1_M2/ggcnn/Jacquard_Samples/Samples/1a9fa4c269cfcc1b738e43095496b061/: 2_1a9fa4c269cfcc1b738e43095496b061_grasps.txt
VBM_PR1_M2/ggcnn/Jacquard_Samples/Samples/1d7830c5d0322518d95aa859a460a9ec/: 1_1d7830c5d0322518d95aa859a460a9ec_grasps.txt  2_1d7830c5d0322518d95aa859a460a9ec_grasps.txt
VBM_PR1_M2/ggcnn/Jacquard_Samples/Samples/2206259551e94d263321831d2245cf06/: 0_2206259551e94d263321831d2245cf06_grasps.txt  2_2206259551e94d263321831d2245cf06_grasps.txt  3_2206259551e94d263321831d2245cf06_grasps.txt  4_2206259551e94d263321831d2245cf06_grasps.txt
VBM_PR1_M2/ggcnn/Jacquard_Samples/Samples/244cc8707720b66bac7e7b41e1ebe3e4/: 0_244cc8707720b66bac7e7b41e1ebe3e4_grasps.txt  3_244cc8707720b66bac7e7b41e1ebe3e4_grasps.txt  4_244cc8707720b66bac7e7b41e1ebe3e4_grasps.txt
VBM_PR1_M2/ggcnn/Jacquard_Samples/Samples/2f486fc43af412df22ebff72a57eff4/: 4_2f486fc43af412df22ebff72a57eff4_grasps.txt
VBM_PR1_M2/ggcnn/Jacquard_Samples/Samples/357e8e4114ebc429e1720743367d35c4/: 0_357e8e4114ebc429e1720743367d35c4_grasps.txt  4_357e8e4114ebc429e1720743367d35c4_grasps.txt
VBM_PR1_M2/ggcnn/Jacquard_Samples/Samples/61921ef74746301497380cf93ab53c21/: 0_61921ef74746301497380cf93ab53c21_grasps.txt  4_61921ef74746301497380cf93ab53c21_grasps.txt
VBM_PR1_M2/ggcnn/Jacquard_Samples/Samples/b1f4459eae651d4a1e4a40c5ca6a557d/: 0_b1f4459eae651d4a1e4a40c5ca6a557d_grasps.txt  3_b1f4459eae651d4a1e4a40c5ca6a557d_grasps.txt  4_b1f4459eae651d4a1e4a40c5ca6a557d_grasps.txt
VBM_PR1_M2/ggcnn/Jacquard_Samples/Samples/e35c7e8c9f85cac42a2f0bc2931a19e/: 1_e35c7e8c9f85cac42a2f0bc2931a19e_grasps.txt  (+2 more)
VBM_PR1_M2/ggcnn/models/: ggcnn.py
define_service/: CMakeLists.txt  (+1 more)
pcl/: CMakeLists.txt  package.xml
pcl/src/: transform_pointcloud.cpp
(+40 files in other folders)
