<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>VBM_PR1_M2</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="73899470+salochinYom@users.noreply.github.com">nmoy</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <exec_depend>model_service_interface</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
